--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,7 +87,7 @@ x-airflow-common:
 
 services:
   pypark-notebook:
-    image: lucasisaacbr/pyspark-notebook:2
+    image: lucasisaacbr/pyspark-notebook:latest
     container_name: brew-notebooks
     user: root
     working_dir: "/home/lisaac"
